logo 클릭시 메인페이지 이동 / 마우스 포인터 변경

--- a/static/css/certificateDetails.css
+++ b/static/css/certificateDetails.css
@@ -18,6 +18,10 @@
     justify-content: center;
 }
 
+.logo {
+            cursor: pointer;
+        }
+
 .select-box {
     margin: 20px auto;
     width: 200px;
