--- a/templates/certificateDetails.html
+++ b/templates/certificateDetails.html
@@ -113,7 +113,7 @@
             <button type="button" class="btn btn-dark" onclick="member_info()">회원정보변경</button>
             <button type="button" class="btn btn-dark" onclick="logout()">Logout</button>
         </div>
-        <div class="logo">
+        <div class="logo" onclick="location.href='/'">
         </div>
         <div class="back_box">
             <button class="btn btn-dark" onclick="backpage()">이전 화면</button>
